Greay out functionality
Picklist Custom code chage

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,170 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+accordion.d.ts
+accordion.js
+api.d.ts
+api.js
+autocomplete.d.ts
+autocomplete.js
+blockui.d.ts
+blockui.js
+breadcrumb.d.ts
+breadcrumb.js
+button.d.ts
+button.js
+calendar.d.ts
+calendar.js
+captcha.d.ts
+captcha.js
+virtualscroller.js
+virtualscroller.d.ts
+tristatecheckbox.js
+tristatecheckbox.d.ts
+treetable.js
+treetable.d.ts
+tree.js
+tree.d.ts
+tooltip.js
+tooltip.d.ts
+toolbar.js
+toolbar.d.ts
+togglebutton.js
+togglebutton.d.ts
+toast.js
+toast.d.ts
+tieredmenu.js
+tieredmenu.d.ts
+terminal.js
+terminal.d.ts
+tabview.js
+tabview.d.ts
+tabmenu.js
+tabmenu.d.ts
+table.js
+table.d.ts
+steps.js
+steps.d.ts
+splitbutton.js
+splitbutton.d.ts
+spinner.js
+spinner.d.ts
+slider.js
+slider.d.ts
+slidemenu.js
+slidemenu.d.ts
+sidebar.js
+sidebar.d.ts
+shared.js
+shared.d.ts
+selectbutton.js
+selectbutton.d.ts
+scrollpanel.js
+scrollpanel.d.ts
+schedule.js
+schedule.d.ts
+rating.js
+rating.d.ts
+radiobutton.js
+radiobutton.d.ts
+progressspinner.js
+progressspinner.d.ts
+progressbar.js
+progressbar.d.ts
+picklist.js
+picklist.d.ts
+password.js
+password.d.ts
+panelmenu.js
+panelmenu.d.ts
+panel.js
+panel.d.ts
+paginator.js
+paginator.d.ts
+package-lock.json
+overlaypanel.js
+overlaypanel.d.ts
+organizationchart.js
+organizationchart.d.ts
+orderlist.js
+orderlist.d.ts
+multiselect.js
+multiselect.d.ts
+messages.js
+messages.d.ts
+message.js
+message.d.ts
+menubar.js
+menubar.d.ts
+menu.js
+menu.d.ts
+megamenu.js
+megamenu.d.ts
+listbox.js
+listbox.d.ts
+lightbox.js
+lightbox.d.ts
+keyfilter.js
+keyfilter.d.ts
+inputtextarea.js
+inputtextarea.d.ts
+inputtext.js
+inputtext.d.ts
+inputswitch.js
+inputswitch.d.ts
+inputmask.js
+inputmask.d.ts
+inplace.js
+inplace.d.ts
+growl.js
+growl.d.ts
+gmap.js
+gmap.d.ts
+galleria.js
+galleria.d.ts
+fullcalendar.js
+fullcalendar.d.ts
+focustrap.js
+focustrap.d.ts
+fileupload.js
+fileupload.d.ts
+fieldset.js
+fieldset.d.ts
+editor.js
+editor.d.ts
+dynamicdialog.js
+dynamicdialog.d.ts
+dropdown.js
+dropdown.d.ts
+dragdrop.js
+dragdrop.d.ts
+dialog.js
+dialog.d.ts
+defer.js
+defer.d.ts
+dataview.js
+dataview.d.ts
+datascroller.js
+datascroller.d.ts
+datalist.js
+datalist.d.ts
+datagrid.js
+datagrid.d.ts
+contextmenu.js
+contextmenu.d.ts
+confirmdialog.js
+confirmdialog.d.ts
+colorpicker.js
+colorpicker.d.ts
+codehighlighter.js
+codehighlighter.d.ts
+chips.js
+chips.d.ts
+checkbox.js
+checkbox.d.ts
+chart.js
+chart.d.ts
+carousel.js
+carousel.d.ts
+card.js
+card.d.ts
